Several contrast fixes

--- a/src/app/components/shared/_dialogs/create-comment/create-comment.component.scss
+++ b/src/app/components/shared/_dialogs/create-comment/create-comment.component.scss
@@ -26,3 +26,8 @@ textarea {
 mat-hint {
   color: var(--on-surface) !important;
 }
+
+::placeholder {
+  color: var(--on-primary);
+  opacity: 1;
+}
